# nba-scoring-data-analysis

./: .gitignore  LICENSE  Makefile  REAME.md  pyproject.toml
data/: all_time_league_leaders_2025.03.08.csv
notebooks/: explore.ipynb
src/nba/: __init__.py  cli.py  download.py  teams.py
